syntax = "proto3";

package netsvr.setUserLoginStatus;

option go_package = "internal/protocol;protocol";

//business向worker请求，设置客户登录状态
message SetUserLoginStatus {
  //连接的session id
  uint32 sessionId = 1;
  //登录状态，成功：true，失败：false
  bool loginStatus = 2;
  //存储到网关的客户信息，登录成功会使用该值进行设置，登录失败会强制设置空字符串
  string userInfo = 3;
  //客户在业务系统中的唯一id，该值只在设置登录状态的时候存储到网关中，其它任何时候都是只读
  string userId = 4;
  //需要发给客户的数据
  bytes data = 5;
}